# 9th_Simulation

./: README.md
rc_control/rc_gazebo/: CMakeLists.txt
rc_control/rc_gazebo/config/: map.rviz  rc2025.rviz
rc_control/rc_gazebo/control/: joy_ctrl.cpp  keyboard_ctrl.cpp  keyboard_info_plus.cpp  matlab_acc.cpp  sim_action_data.cpp
rc_control/rc_gazebo/launch/: create_world.launch  empty_world.launch  joy_contrl.launch  load_basketball_field_map.launch  load_tf_tree.launch  rc2025_gazebo.launch  sim_launch.launch  spawn_robot.launch  stupid_keyboard.launch
rc_control/rc_gazebo/maps/: Basketball_field.pgm  Basketball_field.yaml
rc_control/rc_gazebo/models/court/urdf/: court.csv  court.urdf
rc_control/rc_gazebo/src/: acc_test.cpp
rc_control/rc_gazebo/worlds/: rc2025_field.world
rc_control/rc_hw/include/rc_hw/: control_loop.h
rc_control/rc_ibus/: CMakeLists.txt  nodelet_rc_ibus.xml  package.xml
rc_control/rc_ibus/include/rc_ibus/: ibus_node.h
rc_control/rc_ibus/launch/: test_plugin.launch
rc_control/rc_ibus/src/: ibus_node.cpp
rc_control/rc_msgs/: CMakeLists.txt  package.xml
rc_control/rc_msgs/msg/: SimData.msg
rc_controllers/action_controller/include/action_controller/: action_controller.h
rc_controllers/chassis_controllers/: CMakeLists.txt
rc_controllers/chassis_controllers/src/: chassis_base.cpp  omni.cpp
rc_controllers/chassis_controllers/test/elephant/: elephant.launch  elephant.yaml
rc_controllers/chassis_controllers/test/nineth_r2/: nineth_r2.launch  nineth_r2.yaml
rc_controllers/chassis_controllers/test/rabbit/: rabbit.launch  rabbit.yaml
rc_controllers/chassis_controllers/test/rc_r2/: rc_r2.launch  rc_r2.yaml
rc_description/meshes/rc_r2/: base_link.STL
rc_description/scripts/: get_robot_description.sh
rc_description/urdf/common/: action.urdf.xacro  inertia_utils.urdf.xacro  laser.xacro
rc_description/urdf/elephant/: chassis.urdf.xacro  elephant.urdf.xacro
rc_description/urdf/rabbit/: chassis.urdf.xacro  rabbit.urdf.xacro
rc_description/urdf/rc_r2/: chassis.urdf.xacro  omni_wheel.urdf.xacro
rc_path/air_joy_control/: CMakeLists.txt  nodelet_air_joy.xml  package.xml
rc_path/air_joy_control/config/: air_device.yaml  pub.yaml  sub.yaml
rc_path/air_joy_control/include/air_joy_control/: air_joy.h
rc_path/air_joy_control/launch/: run_air_joy_control.launch
rc_path/air_joy_control/src/: air_joy.cpp
rc_path/move_control/: CMakeLists.txt  nodelet_sim_bringup.xml  package.xml
rc_path/move_control/include/move_control/: sim_bringup.h
rc_path/move_control/launch/: run_move_control.launch  run_sim_bringup.launch
rc_path/move_control/src/: sim_bringup.cpp
rc_path/odom_sensor/: CMakeLists.txt  nodelet_odom_broadcast.xml  package.xml
rc_path/odom_sensor/include/odom_sensor/: odom_broadcast.h
rc_path/odom_sensor/launch/: run_odom_broadcast.launch  test_plugin.launch
rc_path/odom_sensor/src/: odom_broadcast.cpp
rc_path/tf_broadcast/: CMakeLists.txt  nodelet_plugins.xml  package.xml
rc_path/tf_broadcast/config/: pub.yaml  sub.yaml  tf_relation.yaml
rc_path/tf_broadcast/include/tf_broadcast/: tf_broadcast.h
rc_path/tf_broadcast/launch/: run_tf_broadcaster.launch
rc_path/tf_broadcast/src/: tf_broadcast.cpp  tf_broadcast_node.cpp
