<?xml version="1.0"?>
<package format="2">
  <name>tf_broadcast</name>
  <version>0.0.0</version>
  <description>The tf_broadcast package</description>


  <maintainer email="keten@todo.todo">keten</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rc_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rc_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rc_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
